--- a/NaiveBayes.ipynb
+++ b/NaiveBayes.ipynb
@@ -48,12 +48,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bc2f8a37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now all @Apple has to do is get swype on the iphone and it will be crack. Iphone that is\n",
+      "positive\n",
+      "\n",
+      "@Apple will be adding more carrier support to the iPhone 4S (just announced)\n",
+      "positive\n",
+      "\n",
+      "Hilarious @youtube video - guy does a duet with @apple 's Siri. Pretty much sums up the love affair! http://t.co/8ExbnQjY\n",
+      "positive\n",
+      "\n",
+      "Why is #Google advertising Adwords Express on #Bing? Hmmm, I know Ballmer is happy :-D. #Google, your already a monopoly.\n",
+      "negative\n",
+      "\n",
+      "@RIM you made it too easy for me to switch to @Apple iPhone. See ya!\n",
+      "positive\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import csv\n",
+    "import json\n",
     "\n",
     "with open(\"labeled_corpus.tsv\", encoding=\"utf-8\") as csvfile:\n",
     "    readCSV = csv.reader(csvfile, delimiter='\\t')\n",
@@ -84,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f2a671d4",
    "metadata": {},
    "outputs": [],
@@ -107,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cb57548d",
    "metadata": {},
    "outputs": [],
@@ -144,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fd94829a",
    "metadata": {},
    "outputs": [],
@@ -174,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3c2eb85b",
    "metadata": {},
    "outputs": [],
@@ -194,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6c066e11",
    "metadata": {},
    "outputs": [],
@@ -236,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f4eb30c7",
    "metadata": {},
    "outputs": [],
@@ -279,26 +302,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "57960897",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def produce_counts():\n",
-    "   #TODO Your code goes here"
+    "def produce_counts(wcd, te):\n",
+    "   #TODO Your code goes here\n",
+    "\n",
+    "    #for easier indexing\n",
+    "    cat_list = ['positive', 'negative', 'neutral', 'irrelevant']\n",
+    "    \n",
+    "    with open(\"labeled_corpus.tsv\", encoding=\"utf-8\") as csvfile:\n",
+    "        readCSV = csv.reader(csvfile, delimiter='\\t')\n",
+    "        \n",
+    "        #split and clean each tweet\n",
+    "        for row in readCSV:\n",
+    "            tw_se = list(row)\n",
+    "            t_cs = split_tweet(clean_tweet(tw_se[0]))\n",
+    "            \n",
+    "            #init and tally word/sentiment counts\n",
+    "            for word in t_cs:\n",
+    "                if word not in wcd:\n",
+    "                    wcd[word] = [0,0,0,0,0]\n",
+    "                \n",
+    "                wcd[word][cat_list.index(tw_se[1])] += 1\n",
+    "                wcd[word][-1] += 1\n",
+    "                \n",
+    "            te[cat_list.index(tw_se[1])] += 1\n",
+    "            te[-1] += 1\n",
+    "                "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "87d7971d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total positives = 519\n",
+      "total negatives = 572\n",
+      "total documents = 5107\n",
+      "[6, 8, 12, 0, 26]\n",
+      "[12, 6, 16, 0, 34]\n"
+     ]
+    }
+   ],
    "source": [
     "word_counts_dict = {} # \"word\": [positive, negative, neutral, irrelevant, total counts]\n",
     "total_entries = [0, 0, 0, 0, 0] #[positive, negative, neutral, irrelevant, total counts]\n",
     "\n",
-    "produce_counts()\n",
+    "produce_counts(word_counts_dict, total_entries)\n",
     "\n",
     "##### Double-check that your counts are correct\n",
     "# total positives = 519\n",
@@ -348,13 +406,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b8e05703",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def probabilities():\n",
-    "     #TODO Your code goes here"
+    "def probabilities(pp, pd, wcd, te):\n",
+    "    #TODO Your code goes here\n",
+    "    \n",
+    "    for i in range(4):\n",
+    "        pp[i] = te[i] / te[-1]\n",
+    "    \n",
+    "    for word in wcd:\n",
+    "        \n",
+    "        pd[word] = [\n",
+    "            wcd[word][0] / te[0],\n",
+    "            wcd[word][1] / te[1],\n",
+    "            wcd[word][2] / te[2],\n",
+    "            wcd[word][3] / te[3]\n",
+    "            \n",
+    "        ]\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -367,15 +440,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "5977f42e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P('positive') 0.10162522028588213\n",
+      "P('negative') 0.11200313295476796\n",
+      "P('neutral') 0.4558449187389857\n",
+      "P('irrelevant') 0.3305267280203642\n",
+      "[0.011560693641618497, 0.013986013986013986, 0.005154639175257732, 0.0]\n",
+      "[0.023121387283236993, 0.01048951048951049, 0.006872852233676976, 0.0]\n"
+     ]
+    }
+   ],
    "source": [
     "prior_probabilities = [0,0,0,0] #probabilities of 'positive', 'negative', 'neutral', 'irrelevant'\n",
     "probabilities_dict = {} #key: word, value array [positive, negative, neutral, irrelevant]\n",
     "\n",
-    "probabilities()\n",
+    "probabilities(prior_probabilities, probabilities_dict, word_counts_dict, total_entries)\n",
     "\n",
     "print(\"P('positive')\", prior_probabilities[0])     # 0.10162522028588213\n",
     "print(\"P('negative')\", prior_probabilities[1])     # 0.11200313295476796\n",
@@ -451,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "92841f22",
    "metadata": {},
    "outputs": [],
@@ -459,6 +545,47 @@
     "from math import * # for log\n",
     "\n",
     "def classify():\n",
+    "    \n",
+    "    with open(\"geo_twits_squares.tsv\", encoding=\"utf-8\") as csvfile:\n",
+    "        loc_csv = csv.reader(csvfile, delimiter='\\t')\n",
+    "        \n",
+    "        out = []\n",
+    "    \n",
+    "        for row in loc_csv:\n",
+    "            \n",
+    "            #parse and init\n",
+    "            xy_t = list(row)\n",
+    "            c_probs = [0,0,0,0]\n",
+    "            \n",
+    "            #clean\n",
+    "            twit = split_tweet(clean_tweet(xy_t[2]))\n",
+    "            \n",
+    "            \n",
+    "            for word in twit:\n",
+    "                #theres was nothing mentioned about laplace smoothing and i continued to get\n",
+    "                #ValueError and KeyError indexing into the dict or having log(0).\n",
+    "                #because nothing was mentioned about this the program ignores these inputs\n",
+    "                try:\n",
+    "                    word_probs = probabilities_dict[word]\n",
+    "                    \n",
+    "                    for i in range(4):\n",
+    "                        c_probs[i] += log(word_probs[i])\n",
+    "                        \n",
+    "                except:\n",
+    "                    pass\n",
+    "                    \n",
+    "            for i in range(4):\n",
+    "                c_probs[i] += log(prior_probabilities[i])\n",
+    "            \n",
+    "            #add [lat, long, class] to returned list\n",
+    "            out.append([xy_t[0], xy_t[1], max(enumerate(c_probs), key=lambda x: x[1])[0] ])\n",
+    "\n",
+    "    with open(\"locations_classified.tsv\", 'w', newline='') as myfile:\n",
+    "        wr = csv.writer(myfile, delimiter = '\\t')\n",
+    "        wr.writerow(out)\n",
+    "\n",
+    "    return out\n",
+    "    \n",
     "     #TODO Your code goes here"
    ]
   },
@@ -481,8 +608,8 @@
    "outputs": [],
    "source": [
     "result = []\n",
-    "classify()    \n",
-    "print(result[:5])   "
+    "result = classify()   \n",
+    "print(result[:10])   "
    ]
   },
   {
@@ -540,7 +667,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def positivity_score():\n",
+    "def positivity_score(input):\n",
+    "    \n",
+    "    locations = {}\n",
+    "    p_scores = {}\n",
+    "    \n",
+    "    #add all values at same location to a list inside a dict in the form\n",
+    "    #{ (lat, long): class }\n",
+    "    for item in input:\n",
+    "        if (item[0], item[1]) not in locations:\n",
+    "            locations[(item[0], item[1])] = []\n",
+    "            \n",
+    "        locations[(item[0], item[1])].append(item[2])\n",
+    "        \n",
+    "    #basic arithmetic\n",
+    "    for k, v in locations.items():\n",
+    "        \n",
+    "        pos = 0\n",
+    "        neg = 0\n",
+    "        \n",
+    "        for s in v:\n",
+    "            if s == 0:\n",
+    "                pos += 1\n",
+    "            elif s == 1:\n",
+    "                neg += 1\n",
+    "            \n",
+    "        pos_p = pos / len(v)\n",
+    "        neg_p = neg / len(v)\n",
+    "        \n",
+    "        p_scores[k] = (pos_p - neg_p + 1) / 2\n",
+    "        \n",
+    "    \n",
+    "    with open(\"positivity_score.tsv\", 'w', newline='') as myfile:\n",
+    "        wr = csv.writer(myfile, delimiter = '\\t')\n",
+    "        wr.writerow(p_scores)\n",
+    "    \n",
+    "    return p_scores\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
     "     #TODO Your code goes here"
    ]
   },
@@ -551,7 +719,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "positivity_score()"
+    "pscores = positivity_score(result)\n",
+    "c=0\n",
+    "for k,v in pscores.items():\n",
+    "    print(k,v)\n",
+    "    c+=1\n",
+    "    if c > 5: break"
    ]
   },
   {
@@ -596,7 +769,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_js_data():\n",
+    "def generate_js_data(p_s):\n",
+    "    \n",
+    "    #transmute to JSON using a list comp\n",
+    "    data = [{\"score\": x, \"g\": y, \"t\": z} for ((z,y), x) in p_s.items()]\n",
+    "    \n",
+    "    with open('data.js', 'w') as f:\n",
+    "        f.write(\"var data = %s;\" % data)\n",
+    "\n",
+    "    return data\n",
+    "\n",
     "     #TODO Your code goes here"
    ]
   },
@@ -615,7 +797,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_js_data()"
+    "generate_js_data(pscores)"
    ]
   },
   {
@@ -637,15 +819,15 @@
     "word_counts_dict = {} # \"word\": [positive, negative, neutral, irrelevant, total counts]\n",
     "total_entries = [0, 0, 0, 0, 0] #[positive, negative, neutral, irrelevant, total counts]\n",
     "\n",
-    "produce_counts() #count tweets in training data\n",
+    "produce_counts(word_counts_dict, total_entries) #count tweets in training data\n",
     "\n",
     "prior_probabilities = [0,0,0,0] #probabilities of 'positive', 'negative', 'neutral', 'irrelevant'\n",
     "probabilities_dict = {} #key: word, value array [positive, negative, neutral, irrelevant]\n",
     "\n",
-    "probabilities() #calculate probabilities\n",
-    "classify() #classify and write locations_classified.tsv\n",
-    "positivity_score() #calculate positivity scores and write positivity_score.tsv\n",
-    "generate_js_data() #write data.js"
+    "probabilities(prior_probabilities, probabilities_dict, word_counts_dict, total_entries) #calculate probabilities\n",
+    "result = classify() #classify and write locations_classified.tsv\n",
+    "positivity_score(result) #calculate positivity scores and write positivity_score.tsv\n",
+    "generate_js_data(pscores) #write data.js"
    ]
   },
   {
